# numpy_to_jax

./: .gitignore  Dockerfile  README.md  clear_notebooks.sh  environment.yml  exercises.ipynb  hyperparameters.py  main.py  pyproject.toml  requirements.txt  setup.py  solutions.ipynb
base_package_name/: util.py
case_studies/: README.md  setup.py
case_studies/gaussian_mixture_model/: README.md  (+10 more)
exercises/: exe_01_jax_intro.ipynb  exe_02_jit.ipynb  exe_03_loop_primitives.ipynb  exe_03_primitives.ipynb  exe_04_vmap.ipynb  exe_05_profiling.ipynb  exe_06_rng.ipynb  exe_06_sharp_edges.ipynb  exe_07_einsum.ipynb  exe_07_grad.ipynb  exe_08_custom_gradients.ipynb  extras_einsum.ipynb  extras_namedtuple.ipynb
jax_tutorial/: hyperparameters.py  lif_numpy.ipynb  sol_01_jax_intro.ipynb  sol_02_jit.ipynb  sol_03_primitives.ipynb  sol_04_vmap.ipynb  sol_05_profiling.ipynb  sol_06_sharp_edges.ipynb  sol_07_einsum.ipynb
notes/: jax_vs_numba.md
solutions/: Lessons.ipynb  exe_01_jax_intro.ipynb  exe_02_jit.ipynb  exe_03_loop_primitives.ipynb  exe_04_vmap.ipynb  exe_05_profiling.ipynb  extras_einsum.ipynb  extras_when_not_to_jit.ipynb  hyperparameters.py  profiling_util_functions.py  sol_01_jax_intro.ipynb  sol_02_jit.ipynb  sol_03_loops.ipynb  sol_03_primitives.ipynb  sol_03_scan.ipynb  sol_04_namedtuple.ipynb  sol_04_vmap.ipynb  sol_05_einsum.ipynb  sol_05_profiling.ipynb  sol_06_sharp_edges.ipynb  sol_06_vmap.ipynb  sol_07_einsum.ipynb  solutions_01_jax.ipynb  solutions_02_jax.ipynb  solutions_03_jax.ipynb  solutions_04_jax.ipynb  solutions_05_jax.ipynb  solutions_numpy.ipynb
(+17 files in other folders)
